utils/cppchk.txt
..\src\bytebuf.h:48:5: warning: Member variable 'ByteBuffer::ReadOnly' is not initialized in the constructor. [uninitMemberVar]
    ByteBuffer()    { Init(); }
    ^
..\src\misc.h:397:13: error: Uninitialized variable: result [uninitvar]
    return (result == EOF ? ERROR_FileWrite : OK);
            ^
..\src\win_mmap.h:86:5: warning: Class 'WinMMap' does not have a copy constructor which is recommended since it has dynamic memory/resource allocation(s). [noCopyConstructor]
    m_address = MapViewOfFile(m_mapping, FILE_MAP_READ, 0, 0, 0);
    ^
..\src\win_mmap.h:86:5: warning: Class 'WinMMap' does not have a operator= which is recommended since it has dynamic memory/resource allocation(s). [noOperatorEq]
    m_address = MapViewOfFile(m_mapping, FILE_MAP_READ, 0, 0, 0);
    ^
..\src\dstring.h:42:5: style: Class 'DString' has a constructor with 1 argument that is not explicit. [noExplicitConstructor]
    DString (uint size) { Init (size); }
    ^
..\src\win_mmap.h:32:5: style: Class 'WinMMap' has a constructor with 1 argument that is not explicit. [noExplicitConstructor]
    WinMMap(char const* filename);
    ^
..\src\filter.h:46:5: warning: Member variable 'Filter::oldDataTreePly' is not initialized in the constructor. [uninitMemberVar]
    Filter ()           { Init (0); }
    ^
..\src\filter.h:47:5: warning: Member variable 'Filter::oldDataTreePly' is not initialized in the constructor. [uninitMemberVar]
    Filter (uint size)  { Init (size); }
    ^
..\src\filter.h:47:5: style: Class 'Filter' has a constructor with 1 argument that is not explicit. [noExplicitConstructor]
    Filter (uint size)  { Init (size); }
    ^
..\src\filter.cpp:358:13: style: Unsigned expression 'CODE_RunLength' can't be negative so it is unnecessary to test it. [unsignedPositive]
            ENCODE_CONTROL_BITS (CODE_RunLength);
            ^
..\src\filter.cpp:378:13: style: Unsigned expression 'CODE_PrevLiteral' can't be negative so it is unnecessary to test it. [unsignedPositive]
            ENCODE_CONTROL_BITS (CODE_PrevLiteral);
            ^
..\src\filter.cpp:382:13: style: Unsigned expression 'CODE_NewLiteral' can't be negative so it is unnecessary to test it. [unsignedPositive]
            ENCODE_CONTROL_BITS (CODE_NewLiteral);
            ^
..\src\stralloc.h:73:5: warning: Member variable 'StrAllocator::LastAllocSize' is not initialized in the constructor. [uninitMemberVar]
    StrAllocator () {
    ^
..\src\stralloc.h:80:14: warning: Member variable 'StrAllocator::LastAllocSize' is not initialized in the constructor. [uninitMemberVar]
    explicit StrAllocator (uint bucketSize) {
             ^
..\src\index.h:252:5: warning: Member variable 'IndexEntry::Offset' is not initialized in the constructor. [uninitMemberVar]
    IndexEntry() {}
    ^
..\src\index.h:252:5: warning: Member variable 'IndexEntry::WhiteID_Low' is not initialized in the constructor. [uninitMemberVar]
    IndexEntry() {}
    ^
..\src\index.h:252:5: warning: Member variable 'IndexEntry::BlackID_Low' is not initialized in the constructor. [uninitMemberVar]
    IndexEntry() {}
    ^
..\src\index.h:252:5: warning: Member variable 'IndexEntry::EventID_Low' is not initialized in the constructor. [uninitMemberVar]
    IndexEntry() {}
    ^
..\src\index.h:252:5: warning: Member variable 'IndexEntry::SiteID_Low' is not initialized in the constructor. [uninitMemberVar]
    IndexEntry() {}
    ^
..\src\index.h:252:5: warning: Member variable 'IndexEntry::RoundID_Low' is not initialized in the constructor. [uninitMemberVar]
    IndexEntry() {}
    ^
..\src\index.h:252:5: warning: Member variable 'IndexEntry::WhiteBlack_High' is not initialized in the constructor. [uninitMemberVar]
    IndexEntry() {}
    ^
..\src\index.h:252:5: warning: Member variable 'IndexEntry::EventSiteRnd_High' is not initialized in the constructor. [uninitMemberVar]
    IndexEntry() {}
    ^
..\src\index.h:252:5: warning: Member variable 'IndexEntry::EcoCode' is not initialized in the constructor. [uninitMemberVar]
    IndexEntry() {}
    ^
..\src\index.h:252:5: warning: Member variable 'IndexEntry::Dates' is not initialized in the constructor. [uninitMemberVar]
    IndexEntry() {}
    ^
..\src\index.h:252:5: warning: Member variable 'IndexEntry::WhiteElo' is not initialized in the constructor. [uninitMemberVar]
    IndexEntry() {}
    ^
..\src\index.h:252:5: warning: Member variable 'IndexEntry::BlackElo' is not initialized in the constructor. [uninitMemberVar]
    IndexEntry() {}
    ^
..\src\index.h:252:5: warning: Member variable 'IndexEntry::FinalMatSig' is not initialized in the constructor. [uninitMemberVar]
    IndexEntry() {}
    ^
..\src\index.h:252:5: warning: Member variable 'IndexEntry::Flags' is not initialized in the constructor. [uninitMemberVar]
    IndexEntry() {}
    ^
..\src\index.h:252:5: warning: Member variable 'IndexEntry::VarCounts' is not initialized in the constructor. [uninitMemberVar]
    IndexEntry() {}
    ^
..\src\index.h:252:5: warning: Member variable 'IndexEntry::NumHalfMoves' is not initialized in the constructor. [uninitMemberVar]
    IndexEntry() {}
    ^
..\src\index.h:252:5: warning: Member variable 'IndexEntry::HomePawnData' is not initialized in the constructor. [uninitMemberVar]
    IndexEntry() {}
    ^
..\src\index.h:252:5: warning: Member variable 'IndexEntry::Length_Low' is not initialized in the constructor. [uninitMemberVar]
    IndexEntry() {}
    ^
..\src\index.h:252:5: warning: Member variable 'IndexEntry::Length_High' is not initialized in the constructor. [uninitMemberVar]
    IndexEntry() {}
    ^
..\src\movelist.h:60:1: style: The class 'MoveList' does not have a constructor although it has private member variables. [noConstructor]
class MoveList
^
..\src\sqlist.h:30:5: warning: Member variable 'SquareList::Squares' is not initialized in the constructor. [uninitMemberVar]
    SquareList() { ListSize = 0; }
    ^
..\src\position.h:131:12: style: Unused private function: 'Position::AssertPos' [unusedPrivateFunction]
    errorT AssertPos(); //  Checks for errors in board etc.
           ^
..\src\tkdnd\win\TkDND_OleDND.cpp:279:27: portability: Assigning an integer to a pointer is not portable. [AssignmentIntegerToAddress]
              CurPosition = 1 + _tcschr(pszFileName, '\0');
                          ^
..\src\tkscid.cpp:415:0: information: Skipping configuration 'SOURCE_TCL_FILE' since the value of 'SOURCE_TCL_FILE' is unknown. Use -D if you want to check it. You can use -U to skip it explicitly. [ConfigurationNotChecked]
        strCopy(end + 1, SOURCE_TCL_FILE);
^
nofile:0:0: information: Cppcheck cannot find all the include files (use --check-config for details) [missingIncludeSystem]

